# cpp_opencv

./: .gitignore  CMakeLists.txt  README.md  main.cpp
face_detection/: .gitignore  CMakeLists.txt  README.md  face_detection.cpp
webcam/: .gitignore  CMakeLists.txt  README.md  webcam.cpp
